Initial portfolio setup with professional branding

--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' fill='%232196F3'/%3E%3Ctext x='16' y='22' font-family='Arial, sans-serif' font-size='14' font-weight='bold' text-anchor='middle' fill='white'%3EAK%3C/text%3E%3C/svg%3E" />
+    <link
+      rel="shortcut icon"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' fill='%232196F3'/%3E%3Ctext x='16' y='22' font-family='Arial, sans-serif' font-size='14' font-weight='bold' text-anchor='middle' fill='white'%3EAK%3C/text%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2196F3" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+      content="Mantri Ajay Kumar - System Engineer 2 | .NET 8 & AWS Cloud Architect. 6+ years experience in full-stack development, cloud architecture, and high-performance applications." />
+    <meta
+      name="keywords"
+      content="System Engineer, .NET 8, AWS Cloud Architect, React.js, TypeScript, Full Stack Developer, Mantri Ajay Kumar, Software Engineer, Cloud Computing, Microservices" />
+    <meta name="author" content="Mantri Ajay Kumar" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://mantri-ajay-kumar.github.io/portfolio/" />
+    <meta
+      property="og:title"
+      content="Mantri Ajay Kumar - System Engineer 2 | .NET 8 & AWS Cloud Architect" />
+    <meta
+      property="og:description"
+      content="Experienced System Engineer with 6+ years in .NET 8, AWS cloud architecture, and high-performance application development." />
+    <meta property="og:image" content="%PUBLIC_URL%/profile.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://mantri-ajay-kumar.github.io/portfolio/" />
+    <meta
+      property="twitter:title"
+      content="Mantri Ajay Kumar - System Engineer 2" />
+    <meta
+      property="twitter:description"
+      content="System Engineer 2 specializing in .NET 8, AWS Cloud Architecture, and Full Stack Development" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/profile.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Mantri Ajay Kumar - System Engineer 2 | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
